welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: not found: value i
	 return i
                ^